kubernetes/infrastructure/configs/longhorn/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  gatewayClassName: traefik
  listeners:
    - name: https
      hostname: longhorn-homelab.kakatkarakshay.dev
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: longhorn-homelab-kakatkarakshay-dev-tls
